add users from contacts to chat

--- a/quint/makefile
+++ b/quint/makefile
@@ -30,7 +30,7 @@ time.o: util/time.c
 clean: 
 	-rm *.exe *.o dev serv .*-disconnect .*-contacts
 	echo "user1 pass 5001 0 0 3\nuser2 pass 5002 0 0 3\nuser3 pass 5003 0 0 3" > shadow
-	echo "user2" > .user1-contacts
+	echo "user2\nuser4" > .user1-contacts
 	echo "user1\nuser3" > .user2-contacts
 	echo "user2" > .user3-contacts
 
