work on file sharing functionality

--- a/quint/makefile
+++ b/quint/makefile
@@ -28,7 +28,7 @@ time.o: util/time.c
 
 # pulizia dei file della compilazione 
 clean: 
-	-rm *.exe *.o dev serv .*-disconnect .*-contacts
+	-rm *.exe *.o dev serv .*-disconnect .*-contacts copy-*
 	echo "user1 pass 5001 0 0 3\nuser2 pass 5002 0 0 3\nuser3 pass 5003 0 0 3" > shadow
 	echo "user2\nuser4" > .user1-contacts
 	echo "user1\nuser3" > .user2-contacts
