working chatting (also decentralized). Needs show pending. fixed isonline (also decentralized)

--- a/quint/makefile
+++ b/quint/makefile
@@ -31,7 +31,10 @@ clean:
 	mkdir -p user1
 	mkdir -p user2
 	mkdir -p user3
-	-rm *.exe *.o dev serv user*/*
+	mkdir -p hanging/user1
+	mkdir -p hanging/user2
+	mkdir -p hanging/user3
+	-rm *.exe *.o dev serv user*/* hanging/*/*
 	echo "user1 pass 5001 0 0 3\nuser2 pass 5002 0 0 3\nuser3 pass 5003 0 0 3" > shadow
 	echo "user2\nuser4" > user1/contacts
 	echo "user1\nuser3" > user2/contacts
